[build-system]
requires = ["setuptools>=61.0",
            "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "basic_sort_UNIQUE_SUFFIX"
version = "0.0.1"
authors = [{ name="Brennan Poitras", email="brennan.poitras@maine.edu" },
           { name="Author2", email="author2@maine.edu" },
]
description = "An exercise in the capstone course"
readme = "README.md"
requires-python = ">=3.9.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Bug Tracker" = "https://github.com/pypa/python_package_exercise/issues"


